<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="199dp"
            android:layout_height="34dp"
            android:layout_marginTop="129dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:letterSpacing="-0.01"
            android:text="@string/tv_title_sign_in"
            android:textColor="@color/main_gray"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/ic_rectangle_background_grey"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/et_first_name"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/main_text_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/et_last_name"
            android:fontFamily="@font/montserrat"
            android:textSize="11sp"
            android:textColor="@color/main_text_gray"
            android:background="@drawable/ic_rectangle_background_grey"
            android:layout_marginHorizontal="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:hint="@string/et_email"
            android:fontFamily="@font/montserrat"
            android:textSize="11sp"
            android:textColor="@color/main_text_gray"
            android:background="@drawable/ic_rectangle_background_grey"
            android:layout_marginHorizontal="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:enabled="false"
            android:hint="@string/et_sign_in"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:textSize="14sp"
            android:textColorHint="@color/white"
            android:background="@drawable/ic_rectangle_background_blue"
            android:layout_marginHorizontal="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <TextView
            android:id="@+id/tv_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/subtext_already_have_an_account"
            android:textColor="@color/second_text_gray"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="160dp"
            android:layout_marginStart="160dp"
            android:padding="10dp"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:text="@string/btn_log_in"
            android:fontFamily="@font/montserrat"
            android:textSize="10sp"
            android:textColor="@color/link_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginStart="99dp"
            android:background="@drawable/ic_ripple_background_white"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:icon="@drawable/ic_google_logo"
            app:iconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtext" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_ripple_background_white"
            app:icon="@drawable/ic_apple_logo"
            app:iconTint="@color/black"
            android:text="@string/sign_in_with_apple"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:layout_marginStart="99dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_google" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
