<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="199dp"
        android:layout_height="34dp"
        android:layout_marginTop="129dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:letterSpacing="-0.01"
        android:text="@string/tv_log_in_title"
        android:textColor="@color/main_gray"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/ic_rectangle_background_grey"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/et_first_name"
        android:textColor="@color/main_text_gray"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:fontFamily="@font/montserrat"
        android:textSize="11sp"
        android:textColor="@color/main_text_gray"
        android:background="@drawable/ic_rectangle_background_grey"
        android:layout_marginHorizontal="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name"/>

   <!-- <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="35dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/password_text_gray"
        android:hint="@string/et_password"
        android:textColorHint="@color/main_text_gray"
        app:hintTextColor="@color/main_text_gray"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rectangle_background_grey"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:paddingStart="55dp"
            android:inputType="textPassword"
            android:textSize="11sp"/>

    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/ic_rectangle_background_blue"
        android:enabled="false"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:gravity="center"
        android:focusableInTouchMode="true"
        android:hint="@string/btn_log_in"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

</androidx.constraintlayout.widget.ConstraintLayout>